--- a/static/login.html
+++ b/static/login.html
@@ -20,7 +20,8 @@
 			async function login(event) {
 				event.preventDefault()
 				const usernameOrEmail = document.getElementById('usernameOrEmail').value;
-				const username = document.getElementById('usernameOrEmail').value
+				// delete the code line before when you feel confident
+				//const username = document.getElementById('usernameOrEmail').value
 				const password = document.getElementById('password').value
 				const validEmailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/
 
@@ -39,13 +40,15 @@
 						},
 						body: JSON.stringify(authData)
 					});
-					const result = await response.json();
+					const result = await response.text();
 
 					if (result.status === 'ok') {
 						//everything is a okay
 						console.log('Got the token: ', result.data)
 						localStorage.setItem('token', result.data)
 						alert('Success');
+						sessionStorage.setItem('username', result.username);
+						window.location.href = 'welcome.html';
 					} else {
 						alert(result.error);
 					}
